fixing youtube iframe width on mobile

--- a/css/about.css
+++ b/css/about.css
@@ -11,7 +11,7 @@ iframe.soundcloud {
 }
 
 iframe.youtube {
-	width:560px;
+	width:100%;
 	height: 315px;
 	display: block;
 	margin: 20px auto;
